--- a/chat/templates/css/chat.css
+++ b/chat/templates/css/chat.css
@@ -161,6 +161,7 @@
     width: 50%;
     background-color: lightgray;
     z-index: 10000;
+    font-family: "Arial", "Verdana", "Helvectica";
 }
 
 @media screen and (max-width: 768px) {
@@ -216,14 +217,14 @@
     height: 100%;
     right: 20%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
 }
 
 .chat-item img {
     border-radius: 10px;
-    max-width: 100%;
-    max-height: 55px;
+    max-width: 55px;
+    max-height: 100%;
 }
 
 .chat-item .chat-bell {
