--- a/account/templates/style/sidemenu.css
+++ b/account/templates/style/sidemenu.css
@@ -23,8 +23,7 @@
     overflow: auto;
     z-index: 100000;
     max-width: 250px;
-    padding: 5px;
-    margin-right: 0;
+    padding: 5px 5px 0 5px;
 }
 
 .sidemenu .alert {
