--- a/account/templates/account/banner.html
+++ b/account/templates/account/banner.html
@@ -28,7 +28,10 @@
         <p>
             {% trans 'Diese Seite nutzt Cookies. Blabla.. können Sie im Browser irgendwo deaktivieren.. Statistiken werden nicht erstellt.. durch Weiternutzen der Seite stimmen sie zu..' %}<br>
         </p>
-            <a class="blue-button" onclick="javascript:Cookielaw.createCookielawCookie();">{% trans "Mir doch egal!" %}</a>
+            <div class="center-container">
+                <a class="blue-button" onclick="javascript:Cookielaw.createCookielawCookie();">{% trans "Mir doch egal!" %}</a>
+            </div>
+            
     </div>
 </div>
 
