--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -49,7 +49,7 @@
             <h2>
                 {% trans 'Gehört zu: ' %}
                 {% for category in activity.categories.all %}
-                    <a style="margin-left: 5px" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}
+                    <a href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}
                 {% endfor %}
             </h2>
         {% endif %}
@@ -133,7 +133,7 @@
 {% endif %}
 
     <h3>{% trans "Beiträge" %} {{ chosen_component|inim }}</h3>
-    <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'activity' 'activity' activity.id activity.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
+    <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'activity' 'activity' activity.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
     {% include 'wall/post/post_loop.html' %}
 {% endblock %}
 
