--- a/account/templates/style/topmenu.css
+++ b/account/templates/style/topmenu.css
@@ -13,14 +13,25 @@
     z-index: 9999;
 }
 
-.topmenu .logo {
-    width: 10%;
+.topmenu .dropdown {
     float: left;
 }
 
-.topmenu .search {
+.topmenu .logo {
     float: left;
-    display: none;
+    font-size: 16px;
+}
+
+.logo a {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-weight: bold;
+}
+
+.logo a:hover {
+    color: white;
 }
 
 .topmenu .user {
@@ -55,13 +66,13 @@
     margin-left: 10px;
 }
 
-.topmenu .logo a {
+.topmenu .dropdown a {
     text-decoration: none;
     color: #ababab;
     float: left;
 }
 
-.topmenu .logo a:hover {
+.topmenu .dropdown a:hover {
     color: white;
 }
 
