--- a/account/templates/style/sidemenu.css
+++ b/account/templates/style/sidemenu.css
@@ -31,7 +31,7 @@
     background-color: #0087f7;
     border-radius: 10px;
     padding-left: 5px;
-    margin-bottom: 10px;
+    margin: 5px 0;
     float: left;
     display: flex;
     position: relative;
