--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -84,7 +84,7 @@
 {% cookielaw_banner %}
     <div class="topmenu" id="topmenu">
         <div class="logo">
-            <a href="{% url 'account:home' %}"><img src="{% static 'icons/activity.png' %}">myactivities.net</a>
+            <a href="{% url 'account:home' %}"><img src="{% static 'icons/dog.png' %}">myactivities.net</a>
         </div>
         <div class="lang-select">
             {% language_setter request %}
