--- a/account/templates/account/impressum.html
+++ b/account/templates/account/impressum.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class="h-img"><img src="{% static 'icons/info.png' %}">{% trans 'Info' %}</h1>
 <p class="info-p">
-    {% trans 'Mein Name ist Yannik Schroeder und ich habe diese Website zusammengebastelt. Bei irgendwelchen Frage schicken Sie mir ne E-Mail: myactivities.net@web.de' %}
+    {% trans 'Mein Name ist Yannik Schroeder und ich habe diese Website zusammengebastelt. Bei irgendwelchen Fragen schicken Sie mir ne E-Mail: myactivities.net@web.de' %}
 </p>
 
 {% endblock %}
