--- a/account/templates/account/send_friend_request.html
+++ b/account/templates/account/send_friend_request.html
@@ -8,10 +8,10 @@
     {% if target_user %}
         <h1 class="h-img"><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an: ' %} {{ target_user.username }}</h1>
     {% else %}
-        <h1 class="h-img"><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage an jemanden senden' %}</h1>
+        <h1 class="h-img"><img src="/static/icons/invitation.png">{% trans 'Freundschaftsanfrage senden' %}</h1>
     {% endif %}
     <p class="info-p">{% trans "Schreiben Sie" %} {% if target_user %}{{ target_user.username }} {% endif %}{% trans "eine kurze Nachricht" %}.</p>
-    <form method="post">
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Abschicken{% endblocktrans %}">
