--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h1>{% blocktrans %}Passwort ändern{% endblocktrans %}</h1>
     <p>{% blocktrans %}Benutzen Sie folgendes Formular zum Ändern des Passworts:{% endblocktrans %}</p>
-    <form method="post">
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% trans "Ändern" %}">
