--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -7,7 +7,7 @@
     <h1>{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}</h1>
     {% if validlink %}
         <p>{% blocktrans %}Bitte geben Sie das neue Passwort zweimal ein:{% endblocktrans %}</p>
-        <form method="post">
+        <form class="login-form" method="post">
             {{ form.as_p }}
             {% csrf_token %}
             <input type="submit" value="{% blocktrans %}Ändern{% endblocktrans %}">
