--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block title %}{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1>{% blocktrans %}Passwort vergessen?{% endblocktrans %}</h1>
-    <p>{% blocktrans %}Geben Sie ihre E-Mail Adresse ein, um ein neues Passwort zugeschickt zu bekommen.{% endblocktrans %}</p>
-    <form method="post">
+    <h1 class="h-img"><img src="{% static 'icons/forgot.png' %}">{% blocktrans %}Passwort vergessen?{% endblocktrans %}</h1>
+    <p class="info-p">{% blocktrans %}Geben Sie ihre E-Mail Adresse ein, um ein neues Passwort zugeschickt zu bekommen.{% endblocktrans %}</p>
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Senden{% endblocktrans %}">
