--- a/scheduling/templates/scheduling/create_appointment.html
+++ b/scheduling/templates/scheduling/create_appointment.html
@@ -8,7 +8,7 @@
     <h1>{% trans "Termin erstellen" %}</h1>
     <p><a href="{{ group.get_absolute_url }}">{{ group }}</a></p>
     <p>{% trans "Bitte füllen Sie folgendes Formular aus, um ein Treffen zu vereinbaren" %}.</p>
-    <form method="post">
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% trans "Fertig" %}">
