--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1 class="h-img"><img src="{% static 'icons/pen.png' %}">{% blocktrans %}Account bearbeiten{% endblocktrans %}</h1>
     <p class="info-p">{% blocktrans %}Bearbeiten Sie Ihren Account mit folgendem Formular:{% endblocktrans %}</p>
-    <form method="post" enctype="multipart/form-data">
+    <form class="login-form" method="post" enctype="multipart/form-data">
         {{ user_form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Fertig{% endblocktrans %}">
