--- a/competitions/templates/competitions/create_match.html
+++ b/competitions/templates/competitions/create_match.html
@@ -8,7 +8,7 @@
     <p>
         {% trans "Bitte füllen Sie das folgende Formular aus, um ein Match zu erstellen" %}.
     </p>
-    <form method="post" class="login-form">
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% blocktrans %}Fertig{% endblocktrans %}">
