--- a/vacancies/templates/vacancies/create_vacancies.html
+++ b/vacancies/templates/vacancies/create_vacancies.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <h1>{% blocktrans with v0=target %}Leerstellen zu "{{ v0 }}" hinzufügen{% endblocktrans %}</h1>
-    <form method="post">
+    <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
         <input type="submit" value="{% trans "Fertig" %}">
