--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -545,7 +545,7 @@ form label {
     height: 30%;
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
     font-weight: bold;
     overflow-y: scroll; 
     scrollbar-width: none; 
