--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
-{% block title %}{% blocktrans %}Passwort ändern{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1>{% blocktrans %}Passwort ändern{% endblocktrans %}</h1>
-    <p>{% blocktrans %}Sie sollten demnächst eine E-Mail mit Anweisungen zur Passwortzurücksetzung erhalten.{% endblocktrans %}</p>
-    <p>{% blocktrans %}Sollten Sie keine E-Mail erhalten, überprüfen Sie, dass Sie die E-Mail-Adresse eingegeben haben, mit der Sie sich registriert haben.{% endblocktrans %}</p>
+    <h1 class="h-img"><img src="{% static 'icons/reset.png' %}">{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}</h1>
+    <p class="info-p">{% blocktrans %}Sie sollten demnächst eine E-Mail mit Anweisungen zur Passwortzurücksetzung erhalten.{% endblocktrans %}<br><br>
+        {% blocktrans %}Sollten Sie keine E-Mail erhalten, überprüfen Sie, dass Sie die E-Mail-Adresse eingegeben haben, mit der Sie sich registriert haben.{% endblocktrans %}</p>
 {% endblock %}
