--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,5 +1,13 @@
 {% load i18n %}
-
-{% blocktrans with v0=email %}Jemand hat auf myactivities.net  um eine Passwort-Zurücksetzung gebeten und folgende E-Mail angegeben: {{ v0 }}. Falls Sie Ihr Passwort zurücksetzen wollen, folgen Sie diesem Link:{% endblocktrans %}
-{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
-{% blocktrans with v0=user.username %}Falls Sie es vergessen haben sollten, Ihr Nutzername lautet: {{ v0 }}{% endblocktrans %}
+{% load static %}
+<html>
+    <title>{% trans 'Passwort zurücksetzen' %}</title>
+    <body>
+        <h1 style="display: flex; align-items: center; justify-content: center;"><img src="{% static 'icons/forgot.png' %}">{% trans 'Passwort zurücksetzen' %}</h1>
+        <h2 style="text-align: center">{% trans 'Hallo' %} {{ user }}!</h2>
+        <p>{% blocktrans with v0=email %}Jemand hat auf https://www.myactivities.net um eine Passwort-Zurücksetzung gebeten und diese E-Mail Adresse angegeben.<br>
+            Falls Sie Ihr Passwort zurücksetzen wollen, folgen Sie diesem Link: {% endblocktrans %}
+            <a href="{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}</a><br>
+            {% blocktrans with v0=user.username %}Falls Sie es vergessen haben sollten, Ihr Nutzername lautet: {{ v0 }}{% endblocktrans %}</p>
+    </body>
+</html>
