--- a/account/templates/registration/activation_email.html
+++ b/account/templates/registration/activation_email.html
@@ -1,9 +1,11 @@
 {% load i18n %}
+{% load static %}
 <html>
     <title>{% trans 'E-Mail Aktivierung' %}</title>
     <body>
+        <h1 style="display: flex; align-items: center; justify-content: center;"><img src="{% static 'icons/dog.png' %}">{% trans 'E-Mail Aktivierung' %}</h1>
         <p>{% trans 'Hallo' %} {{ user }}!</p>
-        <p>{% trans 'Ihr Account wurde erfolgreich erstellt. Klicken Sie auf den folgenden Link, um ihn zu aktivieren.' %}</p>
+        <p>{% trans 'Ihr Account auf https://www.myactivities.net wurde erfolgreich erstellt. Klicken Sie auf den folgenden Link, um ihn zu aktivieren.' %}</p>
         <p><a href='{{ activation_url }}'>{{ activation_url }}</a></p>
     </body>
 </html>
